--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,14 +59,13 @@
                 <h3 class="main-content-title">Work Experience:</h3>
                 <!--My company 1-->
                 <div class="my-work-experience-block">
-                    <h4 class="my-work-experiece-position">1. ????????? <span class="my-work-experience-company">Private
-                            Entrepreneur</span></h4>
-                    <p class="my-work-experience-time">February 2013 - December 2022 </p>
+                    <h4 class="my-work-experiece-position"><span class="my-work-experience-company">The owner of a chain of retail outlets (non-food product group)</span></h4>
+                    <p class="my-work-experience-time">February 2013 - up to now </p>
 
                 </div>
                 <!--My company 2-->
                 <div class="my-work-experience-block">
-                    <h4 class="my-work-experience-position">2. Broker
+                    <h4 class="my-work-experience-position">Broker
                         <span class="my-work-experience-company">
                             Real estate agency </span>
                     </h4>
@@ -79,12 +78,12 @@
             <div>
                 <h3 class="main-content-title"> Education: </h3>
                 <div class="my-education-section">
-                    <h4 class="my-education-university"><span>1.</span> GoIT </h4>
+                    <h4 class="my-education-university"> GoIT </h4>
                     <h2 class="my-education-professional"> IT EDUСATION </h2>
                     <p class="my-work-experience-time"> February 2022 - up to now</p>
                 </div>
                 <div class="my-education-section">
-                    <h4 class="my-education-university"><span>2.</span>Kyiv State Maritime Academy named after hetman
+                    <h4 class="my-education-university">Kyiv State Maritime Academy named after hetman
                         Petro Konashevich-
                         Sahaydachniy (KSMA)</h4>
                     <h2 class="my-education-professional"> Operation of ship power plants </h2>
@@ -199,25 +198,26 @@
             </div>
             <div class="my-contact-section">
                 <h3 class="sidebar-title">Language :</h3>
-                <div>
-                    <span class="contacts-section-type">English -</span>
-                    <span class="contacts-section-type">Pre-Intermediate</span>
-                </div>
-                <div>
-                    <p>
-                        <span class="contacts-section-type">Ukrainian -</span>
-                        <span class="contacts-section-type">Native</span>
-                    </p>
-                </div>
-                <div>
-                    <p>
-                        <span class="contacts-section-type">Russian -</span>
-                        <span class="contacts-section-type">Native</span>
-                    </p>
-                    <!--!!!-->
-                </div>
-
-
+                <ul class="soft-skills-list">
+                    <li class="soft-skills-item">
+                        <p class="soft-skills-item">
+                            <span class="contacts-section-type">English </span>
+                            <span class="contacts-section-type">Pre-Intermediate</span>
+                        </p>
+                    </li>
+                    <li class="soft-skills-item">
+                        <p class="soft-skills-item">
+                            <span class="contacts-section-type">Ukrainian </span>
+                            <span class="contacts-section-type">Native</span>
+                        </p>
+                    </li>
+                    <li class="soft-skills-item">
+                        <p class="soft-skills-item">
+                            <span class="contacts-section-type">Russian </span>
+                            <span class="contacts-section-type">Native</span>
+                        </p>
+                    </li>
+                </ul>
             </div>
         </aside>
     </div>
