--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="content-section">
             <!--About me section-->
             <div class="about-me-section">
-                <h2 class="about-me-profession">JUNIOR FRONTEND DEVELOPER</h2>
+                <h2 class="about-me-profession">JUNIOR FRONT-END DEVELOPER</h2>
                 <h1 class="about-me-name">Tykhonenko Maksym</h1>
                 <p class="about-me-description">I am a Front-End developer looking for a full-time position in a
                     company that's aimed at making both everyday life and business
@@ -30,7 +30,7 @@
             </div>
             <!--My Projects section-->
             <div class="my-projects-section">
-                <h3 class="main-content-title">Projects</h3>
+                <h3 class="main-content-title">Projects:</h3>
                 <ol class="my-projects-list">
                     <li class="my-projects-item">
                         <span class="my-projects-text">
@@ -52,44 +52,58 @@
                         </span>
                     </li>
 
+                    <li class="my-projects-item">
+                        <span class="my-projects-text">
+                            <a href="https://maksym-tykhonenko.github.io/goit-react-hw-04-images/" class="my-projects-link">Images</a>
+                            .........................
+                            <span class="my-projects-brakcet">[</span>HTML5, CSS3, JavaScript, React<span
+                                class="my-projects-brakcet">]</span>
+                        </span>
+                    </li>
+
+                    <li class="my-projects-item">
+                        <span class="my-projects-text">
+                            <a href="https://maksym-tykhonenko.github.io/goit-react-hw-05-movies" class="my-projects-link">Movies</a>
+                            .........................
+                            <span class="my-projects-brakcet">[</span>HTML5, CSS3, JavaScript, React<span class="my-projects-brakcet">]</span>
+                        </span>
+                    </li>
+
                 </ol>
             </div>
             <!--My Work Experience section-->
-            <div class="my-work-experience-section">
-                <h3 class="main-content-title">Work Experience:</h3>
+            <h3 class="main-content-title">Work Experience:</h3>
+            <ol class="my-work-experience-section">
                 <!--My company 1-->
-                <div class="my-work-experience-block">
+                <li class="my-work-experience-block">
                     <h4 class="my-work-experiece-position"><span class="my-work-experience-company">The owner of a chain of retail outlets (non-food product group)</span></h4>
                     <p class="my-work-experience-time">February 2013 - up to now </p>
-
-                </div>
+                </li>
                 <!--My company 2-->
-                <div class="my-work-experience-block">
-                    <h4 class="my-work-experience-position">Broker
+                <li class="my-work-experience-block">
+                    <h4 class="my-work-experience-position">Realtor
                         <span class="my-work-experience-company">
-                            Real estate agency </span>
-                    </h4>
+                            Real estate agency </span></h4>
                     <p class="my-work-experience-time"> June 2010 - February 2013</p>
-                    <!-- ///////////////////////////////////////////////////////////////////////////////////-->
-                </div>
+                </li>
+            </ol>
 
-            </div>
             <!--My Education section-->
-            <div>
-                <h3 class="main-content-title"> Education: </h3>
-                <div class="my-education-section">
+            <h3 class="main-content-title"> Education: </h3>
+            <ol>
+                <li class="my-education-section">
                     <h4 class="my-education-university"> GoIT </h4>
                     <h2 class="my-education-professional"> IT EDUСATION </h2>
                     <p class="my-work-experience-time"> February 2022 - up to now</p>
-                </div>
-                <div class="my-education-section">
+                </li>
+                <li class="my-education-section">
                     <h4 class="my-education-university">Kyiv State Maritime Academy named after hetman
                         Petro Konashevich-
                         Sahaydachniy (KSMA)</h4>
                     <h2 class="my-education-professional"> Operation of ship power plants </h2>
                     <p class="my-work-experience-time"> September 2005 - June 2010 </p>
-                </div>
-            </div>
+                </li>
+            </ol>
         </div>
         <!--Sidebar section-->
         <aside class="sidebar-section">
@@ -196,27 +210,29 @@
                     </li>
                 </ul>
             </div>
-            <div class="my-contact-section">
+            <!--Language section-->
+            <div class="my-soft-skills-section">
                 <h3 class="sidebar-title">Language :</h3>
                 <ul class="soft-skills-list">
                     <li class="soft-skills-item">
-                        <p class="soft-skills-item">
-                            <span class="contacts-section-type">English </span>
-                            <span class="contacts-section-type">Pre-Intermediate</span>
-                        </p>
+                        <span class="soft-skills-item-text">
+                            <a class="language" href="">
+                                <span class="contacts-section-type">English:</span>Pre-Intermediate</a>
+                        </span>
                     </li>
                     <li class="soft-skills-item">
-                        <p class="soft-skills-item">
-                            <span class="contacts-section-type">Ukrainian </span>
-                            <span class="contacts-section-type">Native</span>
-                        </p>
+                        <span class="soft-skills-item-text">
+                            <a class="language" href="">
+                                <span class="contacts-section-type">Ukrainian:</span>Native</a>
+                        </span>
                     </li>
                     <li class="soft-skills-item">
-                        <p class="soft-skills-item">
-                            <span class="contacts-section-type">Russian </span>
-                            <span class="contacts-section-type">Native</span>
-                        </p>
+                        <span class="soft-skills-item-text">
+                            <a class="language" href="">
+                                <span class="contacts-section-type">Russian:</span>Native</a>
+                        </span>
                     </li>
+                    
                 </ul>
             </div>
         </aside>
