--- a/index.html
+++ b/index.html
@@ -81,9 +81,14 @@
                 </li>
                 <!--My company 2-->
                 <li class="my-work-experience-block">
-                    <h4 class="my-work-experience-position">Realtor
+                    <h4 class="my-work-experience-position">Real estate agent
                         <span class="my-work-experience-company">
-                            Real estate agency </span></h4>
+                            Real estate agency "ДоміК" </span></h4>
+                    <ul class="my-work-experience-duties">
+                        <li class="my-work-experience-duty">Expansion of the client base.</li>
+                        <li class="my-work-experience-duty">Show real estate.</li>
+                        <li class="my-work-experience-duty">Supporting the client when concluding a purchase and sale agreement.</li>
+                    </ul>
                     <p class="my-work-experience-time"> June 2010 - February 2013</p>
                 </li>
             </ol>
@@ -102,6 +107,11 @@
                         Sahaydachniy (KSMA)</h4>
                     <h2 class="my-education-professional"> Operation of ship power plants </h2>
                     <p class="my-work-experience-time"> September 2005 - June 2010 </p>
+                </li>
+                <li class="my-education-section">
+                    <h4 class="my-education-university"> Student program Work & Trevel</h4>
+                    <h2 class="my-education-professional">Lifeguard at the New York's swimming pool</h2>
+                    <p class="my-work-experience-time"> May 2008 - September 2008</p>
                 </li>
             </ol>
         </div>
