--- a/index.html
+++ b/index.html
@@ -201,22 +201,21 @@
                 <h3 class="sidebar-title">Soft Skills :</h3>
                 <ul class="soft-skills-list">
                     <li class="soft-skills-item">
-                        <span class="soft-skills-item-text">
-                            <a class="link" href="https://www.scrum-institute.org/">Scrum</a>
-                            <!--!!!-->
-                        </span>
+                            <p class="link">Proactive</p>
+                    </li>
+                    <li class="soft-skills-item">
+                            <p class="link">Communicative</p>
                     </li>
                     <li class="soft-skills-item">
                         <span class="soft-skills-item-text">
-                            <a class="link" href="https://trello.com/">Trello</a>
-                            <!--!!!-->
+                            <p class="link">Determined</p>
                         </span>
                     </li>
                     <li class="soft-skills-item">
-                        <span class="soft-skills-item-text">
-                            <a class="link" href="https://slack.com/">Slack</a>
-                            <!--!!!-->
-                        </span>
+                            <p class="link">Eager to learn</p>
+                    </li>
+                    <li class="soft-skills-item">
+                            <p class="link">Flexible</p>
                     </li>
                 </ul>
             </div>
@@ -226,20 +225,20 @@
                 <ul class="soft-skills-list">
                     <li class="soft-skills-item">
                         <span class="soft-skills-item-text">
-                            <a class="language" href="">
-                                <span class="contacts-section-type">English:</span>Pre-Intermediate</a>
+                            <p class="language" href="">
+                                <span class="contacts-section-type">English:</span>Pre-Intermediate</p>
                         </span>
                     </li>
                     <li class="soft-skills-item">
                         <span class="soft-skills-item-text">
-                            <a class="language" href="">
-                                <span class="contacts-section-type">Ukrainian:</span>Native</a>
+                            <p class="language" href="">
+                                <span class="contacts-section-type">Ukrainian:</span>Native</p>
                         </span>
                     </li>
                     <li class="soft-skills-item">
                         <span class="soft-skills-item-text">
-                            <a class="language" href="">
-                                <span class="contacts-section-type">Russian:</span>Native</a>
+                            <p class="language" href="">
+                                <span class="contacts-section-type">Russian:</span>Native</p>
                         </span>
                     </li>
                     
