--- a/index.html
+++ b/index.html
@@ -20,13 +20,8 @@
             <div class="about-me-section">
                 <h2 class="about-me-profession">JUNIOR FRONT-END DEVELOPER</h2>
                 <h1 class="about-me-name">Tykhonenko Maksym</h1>
-                <p class="about-me-description">I am a Front-End developer looking for a full-time position in a
-                    company that's aimed at making both everyday life and business
-                    easier, more productive and user-friendly. I have sound knowledge
-                    of HTML, CSS, JavaScript, and React. Also, I have hands-on
-                    experience in following Agile /Scrum methodology when working in
-                    a team. I am a fast learner, responsible, and ready for challenging
-                    tasks.</p>
+                <p class="about-me-description">
+                    I am a graduate of GoIt school skilled in HTML, CSS3/SCSS, JavaScript, React, Redux, Rest API highly interested in position of junior Front-end developer.</p>
             </div>
             <!--My Projects section-->
             <div class="my-projects-section">
@@ -77,6 +72,13 @@
                 <!--My company 1-->
                 <li class="my-work-experience-block">
                     <h4 class="my-work-experiece-position"><span class="my-work-experience-company">The owner of a chain of retail outlets (non-food product group)</span></h4>
+                    <ul class="my-work-experience-duties">
+                        <li class="my-work-experience-duty">Resolving issues related to the lese of premises.</li>
+                        <li class="my-work-experience-duty">Monitoring the correctness of inventories.</li>
+                        <li class="my-work-experience-duty">Planning and procurement.</li>
+                        <li class="my-work-experience-duty">Keeping track of finances and accounting.</li>
+                        <li class="my-work-experience-duty">Managing day-to-day operations.</li>
+                    </ul>
                     <p class="my-work-experience-time">February 2013 - up to now </p>
                 </li>
                 <!--My company 2-->
@@ -210,6 +212,9 @@
                         <span class="soft-skills-item-text">
                             <p class="link">Determined</p>
                         </span>
+                    </li>
+                    <li class="soft-skills-item">
+                        <p class="link">Analytical thinking</p>
                     </li>
                     <li class="soft-skills-item">
                             <p class="link">Eager to learn</p>
