--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="my-projects-item">
                         <span class="my-projects-text">
                             <a href="https://maksym-tykhonenko.github.io/goit-markup-hw-08/index.html" class="my-projects-link">WebStudio</a>,
-                            <a href="https://github.com/Maksym-Tykhonenko/goit-markup-hw-08" class="my-projects-link">Link.</a>
+                            <a href="https://github.com/Maksym-Tykhonenko/goit-markup-hw-08" class="my-projects-link">Link to code.</a>
                             <span class="my-projects-brakcet">[</span>HTML5, CSS3, SASS, BEM<span
                                 class="my-projects-brakcet">]</span>
                         </span>
@@ -39,7 +39,7 @@
                     <li class="my-projects-item">
                         <span class="my-projects-text">
                             <a href="https://maksym-tykhonenko.github.io/goit-js-project-team-10/" class="my-projects-link">Filmoteka</a>,
-                            <a href="https://github.com/Maksym-Tykhonenko/goit-js-project-team-10" class="my-projects-link">Link.</a>
+                            <a href="https://github.com/Maksym-Tykhonenko/goit-js-project-team-10" class="my-projects-link">Link to code.</a>
                             Team project.Role: developer. Creating modal windows<br/>
                              and writing the related JS code.<span class="my-projects-brakcet">[</span>HTML5, CSS3, JavaScript<span
                                 class="my-projects-brakcet">]</span>
@@ -49,7 +49,7 @@
                     <li class="my-projects-item">
                         <span class="my-projects-text">
                             <a href="https://maksym-tykhonenko.github.io/goit-react-hw-04-images/" class="my-projects-link">Images</a>,
-                            <a href="https://github.com/Maksym-Tykhonenko/goit-react-hw-04-images" class="my-projects-link">Link.</a>
+                            <a href="https://github.com/Maksym-Tykhonenko/goit-react-hw-04-images" class="my-projects-link">Link to code.</a>
                             Role: developer. An independent project which introduced<br /> me the technologies<span class="my-projects-brakcet">[</span>HTML5, CSS3, JavaScript, React<span
                                 class="my-projects-brakcet">]</span>
                         </span>
@@ -58,7 +58,7 @@
                     <li class="my-projects-item">
                         <span class="my-projects-text">
                             <a href="https://maksym-tykhonenko.github.io/goit-react-hw-05-movies" class="my-projects-link">Movies</a>,
-                            <a href="https://github.com/Maksym-Tykhonenko/goit-react-hw-05-movies" class="my-projects-link">Link.</a>
+                            <a href="https://github.com/Maksym-Tykhonenko/goit-react-hw-05-movies" class="my-projects-link">Link to code.</a>
                             Role: developer. An independent project which introduced<br/>  me the technologies <span class="my-projects-brakcet">[</span>HTML5, CSS3, JavaScript, React<span class="my-projects-brakcet">]</span>
                         </span>
                     </li>
