--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
                             Aplication for choosing a movie. Role: developer. An independent project which introduced<br/>  me the technologies <span class="my-projects-brakcet">[</span>HTML5, CSS3, JavaScript, React<span class="my-projects-brakcet">]</span>
                         </span>
                     </li>
+                    
+                    <li class="my-projects-item">
+                        <span class="my-projects-text">
+                            <a class="my-projects-link">Spot-game</a>,
+                            <a href="https://github.com/Maksym-Tykhonenko/spot-game" class="my-projects-link">Link.</a>
+                            The game is made on the pattern of "spot". Role: developer. An independent project. Executed a project commissioned by
+                            <a  class="my-projects-link" href="https://www.upstars.com/">"Upstars"</a> company. Technologies used <span class="my-projects-brakcet">[</span>JavaScript, React Native, Expo<span
+                                class="my-projects-brakcet">]</span>
+                        </span>
+                    </li>
 
                 </ul>
             </div>
@@ -201,6 +211,12 @@
                             <!--!!!-->
                         </span>
                     </li>
+                    <li class="tech-skills-item">
+                        <span class="tech-skills-item-text">
+                            <a class="link" href="https://reactjs.org/">React Native</a>
+                            <!--!!!-->
+                        </span>
+                    </li>
                 </ul>
             </div>
             <!--Soft Skills section-->
@@ -231,7 +247,7 @@
                     <li class="soft-skills-item">
                         <span class="soft-skills-item-text">
                             <p class="language" href="">
-                                <span class="contacts-section-type">English:</span>Pre-Intermediate</p>
+                                <span class="contacts-section-type">English:</span>Intermediate</p>
                         </span>
                     </li>
                     <li class="soft-skills-item">
@@ -240,12 +256,12 @@
                                 <span class="contacts-section-type">Ukrainian:</span>Native</p>
                         </span>
                     </li>
-                    <li class="soft-skills-item">
+                    <!--<li class="soft-skills-item">
                         <span class="soft-skills-item-text">
                             <p class="language" href="">
                                 <span class="contacts-section-type">Russian:</span>Native</p>
                         </span>
-                    </li>
+                    </li> -->
                     
                 </ul>
             </div>
