--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1 class="about-me-name">Tykhonenko Maksym</h1>
                 <h2 class="about-me-profession">JUNIOR FRONT-END DEVELOPER</h2>
                 <p class="about-me-description">
-                    I am a graduate of GoIt school skilled in HTML, CSS3/SCSS, JavaScript, React, Redux, Rest API highly interested in position of junior Front-end developer.</p>
+                    I am a graduate of GoIt school skilled in HTML, CSS3/SCSS, JavaScript, React, Redux, React Native, Rest API highly interested in position of junior Front-end developer.</p>
             </div>
             <!--My Projects section-->
             <div class="my-projects-section">
