--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             <!--About me section-->
             <div class="about-me-section">
                 <h1 class="about-me-name">Tykhonenko Maksym</h1>
-                <h2 class="about-me-profession">JUNIOR FRONT-END DEVELOPER</h2>
+                <h2 class="about-me-profession">FRONT-END DEVELOPER</h2>
                 <p class="about-me-description">
-                    I am a graduate of GoIt school skilled in HTML, CSS3/SCSS, JavaScript, React, Redux, React Native, Rest API highly interested in position of junior Front-end developer.</p>
+                    I have skills in working with HTML, CSS3/SCSS, JavaScript, React, Redux, React Native, Rest API, I am very interested in
+                    the position of Front-end IOS developer.</p>
             </div>
             <!--My Projects section-->
             <div class="my-projects-section">
@@ -78,10 +79,16 @@
             <!--My Work Experience section-->
             <h3 class="main-content-title">Work Experience:</h3>
             <ul class="my-work-experience-section">
+                <!--My company 0-->
+                <li class="my-work-experience-block">
+                    <h4 class="my-work-experiece-position"><span class="my-work-experience-company">Worked as a freelance IOS developer</span></h4>
+                    <p class="my-work-experience-time">July 2023 - up to now </p>
+                    
+                </li>
                 <!--My company 1-->
                 <li class="my-work-experience-block">
                     <h4 class="my-work-experiece-position"><span class="my-work-experience-company">The owner of a chain of retail outlets (non-food product group)</span></h4>
-                    <p class="my-work-experience-time">February 2013 - up to now </p>
+                    <p class="my-work-experience-time">February 2013 - February 2023 </p>
                     <ul class="my-work-experience-duties">
                         <li class="my-work-experience-duty">Resolving issues related to the lese of premises.</li>
                         <li class="my-work-experience-duty">Monitoring the correctness of inventories.</li>
@@ -112,7 +119,7 @@
             <ul>
                 <li class="my-education-section">
                     <h4 class="my-education-university"> GoIT </h4>
-                    <p class="my-work-experience-time"> February 2022 - up to now</p>
+                    <p class="my-work-experience-time"> February 2022 - February 2023</p>
                     <h2 class="my-education-professional"> Full Stack Developer
                        <!-- -->
                     </h2>
@@ -217,6 +224,24 @@
                             <!--!!!-->
                         </span>
                     </li>
+                    <li class="tech-skills-item">
+                        <span class="tech-skills-item-text">
+                            <a class="link" href="https://reactjs.org/">One Signal</a>
+                            <!--!!!-->
+                        </span>
+                    </li>
+                    <li class="tech-skills-item">
+                        <span class="tech-skills-item-text">
+                            <a class="link" href="https://reactjs.org/">Web View</a>
+                            <!--!!!-->
+                        </span>
+                    </li>
+                    <li class="tech-skills-item">
+                        <span class="tech-skills-item-text">
+                            <a class="link" href="https://reactjs.org/">Apps Flyer</a>
+                            <!--!!!-->
+                        </span>
+                    </li>
                 </ul>
             </div>
             <!--Soft Skills section-->
@@ -247,7 +272,7 @@
                     <li class="soft-skills-item">
                         <span class="soft-skills-item-text">
                             <p class="language" href="">
-                                <span class="contacts-section-type">English:</span>Intermediate</p>
+                                <span class="contacts-section-type">English:</span>pre intermediate</p>
                         </span>
                     </li>
                     <li class="soft-skills-item">
